chore: Added JWT intro demo.
